# XG3Darts

./: .env.example  .gitignore  .railwayignore  Dockerfile  PLATFORM_STATE.md  README.md  lock_state.json  pyproject.toml  railway.json  requirements-prod.txt  requirements.txt  startup.sh
alembic/: env.py
app/: __init__.py  auth.py  config.py  main.py
calibration/: __init__.py  beta_calibrator.py  calibration_monitor.py  market_calibrators.py
competition/: __init__.py  draw_result.py  era_versioning.py  format_registry.py
compliance/: __init__.py  gdpr_anonymizer.py
data/: __init__.py  coverage_regime.py  entity_resolution.py  fixtures_2026.json  source_confidence.py
db/: __init__.py  models.py  session.py
docs/: API.md  DEPLOYMENT.md
elo/: __init__.py  elo_pipeline.py
engines/: errors.py
margin/: blending_engine.py  shin_margin.py
models/: __init__.py  causal_advantage.py  empirical_bayes.py  explainer.py  loader.py  lstm_sequence.py  r0_logit.py  r1_file_predictor.py  r1_lgbm.py  r2_stacking.py  regime_selector.py  trainer.py  womens_transfer.py
monitoring/: clv_monitor.py  drift_detector.py  market_calibration_monitor.py  markov_validator.py  metrics.py
outrights/: gpu_simulator.py  ray_simulator.py  tournament_simulator.py
props/: data_sufficiency_gate.py  prop_180.py  prop_checkout.py  prop_nine_darter.py
scripts/: alembic_stamp_fix.py  backfill_elo.py  bulk_ingest.py  compute_sequential_elo.py  download_historical_odds.py  enrich_dartsorakel.py  enrich_wdf.py  ingest_dartsdatabase.py  ingest_dartsorakel.py  ingest_elo.py  ingest_pdc.py  (+8 more)
(+123 files in other folders)
