[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xg3-darts"
version = "0.1.0"
description = "XG3 Tier-1 Darts Sports Betting Microservice"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "-v",
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    "scripts/*",
    "*/__init__.py",
]
